third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.3/access_specifiers/access_ok.exp
module 0x42::m {
    struct T has store {
    }
    struct G<phantom T> has store {
    }
    struct R has store {
    }
    struct S has store {
    }
    fun make_up_address(_x: u64): address {
        0x42
    }
    fun f10(x: u64) {
        ()
    }
    fun f11() {
        ()
    }
    fun f12() {
        ()
    }
    fun f2() {
        ()
    }
    fun f3() {
        ()
    }
    fun f4() {
        ()
    }
    fun f5() {
        ()
    }
    fun f6() {
        ()
    }
    fun f7() {
        ()
    }
    fun f8() {
        ()
    }
    fun f9(a: address) {
        ()
    }
    fun f_multiple() {
        ()
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: cannot return `integer` from a function with result type `address`
   ┌─ access_ok.move:11:9
   │
11 │         0x42
   │         ^^^^
